feat: add body weight tracking
